동영상출력 예외처리